Bug 1414397 - Make sure we properly invalidate the entire frame subtree when detecting a caret frame change. r=miko

--HG--
extra : rebase_source : add63296c95ea090ca79ab120bede8038ce4f59e